--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,37 @@
 	padding: 0;
 }
 
+/*COISAS NOVAS QUE PODEM GERAR DÚVIDAS:
+1. a > nos códigos nada mais que é mostrando o
+caminho especifico que vamos determinar os valores 
+seguintes, garantindo que apenas o elemento "setado"
+receba tal valor.
+
+2. Podemos determinar valores com px(pixel), 
+%(porcentagem) e também vh(ViewPort height) ou 
+vw(ViewPort width) elas simplesmente captam o tamanho
+da tela através da tag meta viweport que esta inserida
+no nosso html (<meta name="viewport" content="width=device-width, initial-scale=1">)
+e deixam o elemento com a altura ou largura total da 
+janela em que foi aberta. Dessas duas ultimas citadas apenas
+a vh foi utilizada. (existem várias outras formas de 
+determinar valores, mas essas são as principais e também
+utilizadas aqui, exceto a vw).
+
+3. A class container é utilizada para organizar
+e manter todo o código centralizado na página!
+
+4. Quando há um elemento dentro de uma classe container
+e é determinado um width 100% para esse elemento ele irá 
+ser 100% do tamanho do .container e não da tela inteira
+pois o .container é o elemento pai referente ao elemento 
+modificado. Isso não funciona apenas para a classe .container
+mas também para QUALQUER ELEMENTO que estiver dentro 
+de outro elemento.
+
+5.
+*/
+
 body{
 	background-color: #fff;
 	width: 100%;
@@ -48,7 +79,6 @@ nav.menu{
 nav.menu > picture > a > img{
 	width: 200px;
 	height:90px;
-	/* margin: 50px 25% 20px 0; */
 	margin-right: 15%;
 } 
 
@@ -116,7 +146,6 @@ nav.menu > .navegacao > .busca > input:focus{
 	width: 100%;
 	height: 100vh;
 	position: relative;
-/* 	top: 130px; */
 }
 
 .slider {
@@ -304,9 +333,104 @@ section.curso > .container > h2{
 	margin-bottom: 20px;
 }
 
-/********** CSS DO SISTEMA **********/
 
-.logo{
+
+
+
+/********** CSS DO SISTEMA **********/
+/* aqui se inicia o css APENAS do Sistema,
+nada que tiver a partir daqui influenciará no css
+do site e nem nada que for do css do site influenciará
+aqui. Ok? ok. */
+
+/*********** CSS PÁGINA INICIAL DO SISTEMA **********/
+section.sistem-content{
+	height: 100vh;
+}
+
+section.topofix{
+	width: 100%;
+	height: 150px;
+	background-image: url(../img/bg-sistema.png);
+}
+
+section.topofix > .container > img{
+	width: 250px;
+	height: 120px;
+	margin: 15px 0;
+}
+
+section.topofix > .container > a.btn{
+	float: right;
+	margin: 53px 0;
+	padding: 10px;
+	border: solid 2px #3CB371;
+	border-radius: 5px;
+	width: 10%;
+	text-align: center;
+	background-color: #fff;
+	color: #006400;
+}
+
+section.topofix > .container > a.btn:hover{
+	background-color: #F0FFF0;
+}
+
+section.users{
+	height: 100vh;
+	background-color: #eee;
+}
+
+section.users > .container > ul{
+	width: 100%;
+	padding-top: 20%;
+}
+
+section.users > .container > ul > li > a.opcao-user{
+	display: inline-table;
+	float: left;
+	width: 200px;
+	height: 200px;
+	margin: 0 3%;
+	border-radius: 100px;
+	opacity: 0.7;
+}
+
+section.users > .container > ul > li > a.opcao-user:hover{
+	opacity: 1;
+}
+
+section.users > .container > ul > li > a.opcao-user img{
+	width: 110px;
+	height: 120px;
+	margin: 30px 0 0 43px;
+}
+
+section.users > .container > ul > li > a.opcao-user p{
+	text-align: center;
+	font-weight: 900;
+	color: #fff;
+	font-size: 20px;
+
+}
+
+section.users > .container > ul > li > a.aluno{
+	background-color: #713D74;
+}
+
+section.users > .container > ul > li > a.prof{
+	background-color: #44ADDD;
+}
+
+section.users > .container > ul > li > a.secretaria{
+	background-color: #11F4B4;
+}
+
+section.users > .container > ul > li > a.help{
+	background-color: #F92961;
+}
+
+/* .logo{
 	margin: 30px 40%;
 }
 
@@ -472,3 +596,4 @@ button:active{
 	background-color: #B4EEB4;
 	font-weight: 900;
 }
+ */
